package org.marco.designpattern.gof.structural.decorator;

/**
 * 组件类接口
 */
public interface Component {
    void operate();
}
